deploy: 9a6057b4b581a629fc039af70f8eeaafec056520

--- a/_n_m_e_a2000_8cpp.html
+++ b/_n_m_e_a2000_8cpp.html
@@ -1252,7 +1252,7 @@ Variables</h2></td></tr>
 <li>126986L: Alert Configuration, pri=2, period=NA</li>
 <li>126987L: Alert Threshold, pri=2, period=NA</li>
 <li>126988L: Alert Value, pri=2, period=10000</li>
-<li>127233L: Alert Value, pri=3, period=NA</li>
+<li>127233L: Man Overboard Notification(MOB), pri=3, period=NA</li>
 <li>127237L: Heading/Track control, pri=2, period=250</li>
 <li>127489L: Engine parameters dynamic, pri=2, period=500</li>
 <li>127496L: Trip fuel consumption, vessel, pri=5, period=1000</li>
